# Haskell

./: .gitignore  README.md  haskell-api-monitor.cabal
app/: Main.hs
scripts/: build_release.sh  choose_port.sh  run_tests.sh
src/App/: Checker.hs  Config.hs  Contract.hs  Db.hs  Endpoint.hs  Html.hs  Logging.hs  Migrations.hs  Reports.hs  Routes.hs  Scheduler.hs  Server.hs  Types.hs  Validator.hs
src/App/Security/: UrlSafety.hs
test/App/: CheckerSpec.hs  ContractSpec.hs  ScoringSpec.hs  UrlSafetySpec.hs  ValidatorSpec.hs
